--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - 2.0.0
-  - jruby-20mode
-  - rbx-20mode
+# no lazy for enumerators in jruby 2.0
+#  - jruby-20mode
+# no rubynius working at the moment
+#  - rbx-20mode
 script: bundle exec rake
