--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,12 @@ rvm:
   - jruby-head
   - jruby-21mode
   - jruby-20mode
-  - rbx
 script: bundle exec rake
+matrix:
+  allow_failures:
+  - ruby-head
+  # no lazy for enumerators in jruby
+  - jruby-head
+  - jruby-21mode
+  - jruby-20mode
+
