--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ rvm:
 script: bundle exec rake
 matrix:
   allow_failures:
-  - ruby-head
+  - rvm: ruby-head
   # no lazy for enumerators in jruby
-  - jruby-head
-  - jruby-21mode
-  - jruby-20mode
+  - rvm: jruby-head
+  - rvm: jruby-21mode
+  - rvm: jruby-20mode
 
