Swap sub-titles in readme and github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Storexplore
-description: The storexplore ruby gem simplifies the declaration of APIs on online stores through scraping
+description: Transform online stores into APIs !
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-tactile
